NIFI-13989 Fixed Checkstyle errors and other Intellij warnings.